# sprinker-ai

./: .env.example  .gitignore  LICENSE  README.md  config.example.yaml  install.sh  pyproject.toml  requirements.txt
contrib/: sprinkler-ai-bot.service  sprinkler-ai-vision.service  sprinkler-ai-vision.timer  sprinkler-ai.service  sprinkler-ai.timer
docs/: discord-setup.md  nest-setup.md
src/sprinkler_ai/: __init__.py  cli.py  config.py  diagnose.py  discord_bot.py  ecowitt.py  history.py  init.py  nest.py  notify.py  planner.py  rainbird_client.py  weather.py
